<resources>
    <string name="app_name">Графы</string>
    <string name="add_graph">Создание графа</string>
    <string name="edit_graph">Редактирование графа</string>
    <string name="add_node">Добавление точки на граф</string>
    <string name="add_link">Добавление связи</string>
    <string name="new_text">Новый</string>
    <string name="edit_text">Изменить</string>
    <string name="delete_text">Удалить</string>
    <string name="copy_text">Копировать</string>
    <string name="info_FIO">Калмыков Семён 403</string>
</resources>